# threestacks

./: .gitignore  Makefile  README.md  argtable3.h  compile.sh  configure.ac  inst.sh  threestacks.c
src/: Makefile.am  old_ts.c  threestacks.c
src/.deps/: argtable3.Po  threestacks.Po
